# jenkins-job-scraper

./: requirements.txt  setup.cfg  tripleo-jobs.py
jenkins_job_scraper/: scrape_jobs.py
