[metadata]
name = Jenkins Job Scraper
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
summary = Pull recent job results from all jenkins servers
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    jenkins
[files]
packages =
    jenkins-job-scraper

# [entry_points]
# console_scripts =
#     prep_source_repos = prep_source_repos.cmd:main
